[v9r2]
use DIRAC v6r20p7

* delete pilot syncronizer, because it is in DIRAC
* set PYCURL_SSL_LIBRARY
* handle correctly the case when some parameter is missing
* correct the file path
* added try/except for incomplete requests
* fix for NoneType
* improve printout
* better format + new option --Parameters
* protect against exception opening XML summary
* fix visibility for removal transformations
* increase the size of the file type
* fix getMaxFilesToReplicate (disabling throttling to tape SEs)
* print BK query timing in all cases
* make a single query for a list of prods or event types
* avoid nDatasets==0
* Release locks in ProductionRequestDB.py when file type checks fail
* Fix outdated comments in ProductionRequestDB.py
* Require any previous step to have created a suitable input
* Move file type check so that pre-existing bad productions can still be updated
* Remove redundant cPickle.load in ProductionRequestDB
* Check input and output file types match when creating/updating production requests
* installing libcurl-devel
* removed UsersAndGroups.py
* several fixes to adapt to DIRAC v6r20
* remove old BOINC host
* add BOINC host for update
* removed HammerCloud
* removed GridCollectorAgent
* removed useless script
* removed scripts moved to vanilla DIRAC
* removed old/unmaintained scripts
* cleaning only for Idle prods
* postponing BK registration if there's a request to register the LFN in the DFC
* removed part of SLSAGent
* backported rescheduling of Ganga jobs for lb-run errors
* update of docs and config template
* fixes on types_getJobParameter and commitRegisters URL
* BOINC: stricter TLS options
* CI: use curl instead of wget 
* CI: added lhcbDiracReplace function
* CI: don't use SSL for ES
* CI: added some stuff to ignore
* CI: corrected location
* CI: removed mergeMDF, added mergeHISTOs
* CI: avoiding back tick
* CI: removed not-anymore-useful tests
* CI: removed MDFmerge
* CI: removed old tests
* CI: removed old/deprecated stuff for Jenkins