@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v9r2p1
+  {
+    Modules = LHCbDIRAC:v9r2p1, LHCbWebDIRAC:v4r4p8
+    Depends = DIRAC:v6r20p7
+    LcgVer = v14r2
+  }
+
   v9r2
   {
     Modules = LHCbDIRAC:v9r2, LHCbWebDIRAC:v4r4p8
