@@ -1,6 +1,6 @@
 {
   "name": "LHCbDirac",
-  "version": "v9r2",
+  "version": "v9r2p1",
   "used_projects": {
     "project": [
       [ "Dirac", "v6r20p7",
